--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
         arguments: [],
-        dataUrl: "Build/WebBuild.data.br",
-        frameworkUrl: "Build/WebBuild.framework.js.br",
-        codeUrl: "Build/WebBuild.wasm.br",
+        dataUrl: "Build/WebBuild.data",
+        frameworkUrl: "Build/WebBuild.framework.js",
+        codeUrl: "Build/WebBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "PuzzleChallenger",
